[project]
name = "yt2mp3"
version = "0.4.0"
license = "GPL"
authors = [
    { email = "oneirag@yahoo.es", name = "Oscar Neira" }
]
readme = "README.md"
requires-python = ">=3.8"
description = "Simple tool to download mp3 from youtube"

dependencies = [
    # youtube-dl,                # for downloading youtube videos. Asof 202306: fails to work
    "yt-dlp",                      # for downloading youtube videos
    "youtube-search-python",       # for searching youtube by name
    "pynormalize",                 # for normalizing volume of mp3 files
    "PyQt6",
    "PyQt6-WebEngine",
    "superqt",       # A range slider for cutting files
    # Post install script won't be needed in this case
    "ong_utils @ git+https://github.com/Oneirag/ong_utils@feature/shortcuts"
]

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"ong_yt2mp3.icons" = ["*.png", "*.icns"]          # Include icon files
"ong_yt2mp3.i18n" =  ["*.qm"]            # Include translation files

[project.urls]  # Optional
"Homepage" = "https://github.com/Oneirag/yt2mp3"
"Source" = "https://github.com/Oneirag/yt2mp3.git"

[build-system]
requires = [
    "setuptools",
    "wheel",
    "ong_utils @ git+https://github.com/Oneirag/ong_utils@feature/shortcuts"
]

build-backend = "setuptools.build_meta"

[project.scripts]
yt2mp3 = "ong_yt2mp3.browser:main"
